--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.6",
     "sass": "^1.80.7",
     "slick-carousel": "^1.8.1"
   },
