--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-phone-number-input": "^3.4.9",
     "react-router-dom": "^6.28.0",
     "react-select": "^5.8.3",
     "react-select-country-list": "^2.2.3",
